Fix spacing between elements on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -510,3 +510,9 @@ nav ul#social-media > li {
     font-size: 1.5em;
     margin: 0.5em;
 }
+
+
+.choice p {
+  margin-bottom: 4rem;
+  margin-top: 4rem;
+}
